--- a/Food-Delivery/src/main/resources/application.properties
+++ b/Food-Delivery/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.jackson.date-format=dd-MM-yyyy
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/test
-spring.datasource.username = root
-spring.datasource.password = root
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
